fix alignment and footer

--- a/app/assets/stylesheets/navbar.css.sass
+++ b/app/assets/stylesheets/navbar.css.sass
@@ -7,9 +7,6 @@
 #myname
   font-size: 42px
 
-.navbar-fixed-bottom
-  margin-top: 50px
-
 body
   position: relative
   margin: 0px
